--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
     <g-button icon="setting" icon-position="right">
         按钮
     </g-button>
+    <g-icon name="download"></g-icon>
 </div>
 
 
