--- a/index.html
+++ b/index.html
@@ -69,6 +69,9 @@
         <g-input value="王五"></g-input>
     </div>
     <div class="box">
+        <g-input value="fang" @change="inputchange"></g-input>
+    </div>
+    <div class="box">
         <g-input value="fang" error="姓名不能少于两个字"></g-input>
     </div>
 
