基本实现row和col的功能

--- a/index.html
+++ b/index.html
@@ -48,24 +48,35 @@
 </head>
 <body>
 <div id="app">
-    <g-row>
-        <g-col></g-col>
-        <g-col></g-col>
-    </g-row>
-    <g-row>
-        <g-col></g-col>
-        <g-col></g-col>
-        <g-col></g-col>
-    </g-row>
-    <g-row>
-        <g-col :span="2"></g-col>
-        <g-col :span="22"></g-col>
-    </g-row>
-    <g-row>
-        <g-col :span="4"></g-col>
-        <g-col :span="16"></g-col>
-        <g-col :span="4"></g-col>
-    </g-row>
+    <div>
+        <g-row gutter="20">
+            <g-col></g-col>
+            <g-col></g-col>
+        </g-row>
+        <g-row gutter="20">
+            <g-col></g-col>
+            <g-col></g-col>
+            <g-col></g-col>
+        </g-row>
+        <g-row gutter="20">
+            <g-col :span="2"></g-col>
+            <g-col :span="22"></g-col>
+        </g-row>
+        <g-row gutter="20">
+            <g-col :span="4"></g-col>
+            <g-col :span="16"></g-col>
+            <g-col :span="4"></g-col>
+        </g-row>
+        <g-row gutter="20">
+            <g-col :span="4"></g-col>
+            <g-col :span="20"></g-col>
+        </g-row>
+        <g-row gutter="20">
+            <g-col :span="4"></g-col>
+            <g-col :span="10"></g-col>
+            <g-col :span="10"></g-col>
+        </g-row>
+    </div>
     <div class="box">
         <g-button :loading="loading1" @click="loading1 = !loading1">
             按钮
