--- a/index.html
+++ b/index.html
@@ -48,15 +48,15 @@
 </head>
 <body>
 <div id="app">
-    <div>
+    <div style="border: 1px solid black">
         <g-row gutter="20">
-            <g-col></g-col>
-            <g-col></g-col>
+            <g-col>1</g-col>
+            <g-col>2</g-col>
         </g-row>
         <g-row gutter="20">
-            <g-col></g-col>
-            <g-col></g-col>
-            <g-col></g-col>
+            <g-col>1</g-col>
+            <g-col>2</g-col>
+            <g-col>3</g-col>
         </g-row>
         <g-row gutter="20">
             <g-col :span="2"></g-col>
