--- a/index.html
+++ b/index.html
@@ -59,8 +59,22 @@
             <g-col>3</g-col>
         </g-row>
         <g-row gutter="20">
-            <g-col :span="2"></g-col>
-            <g-col :span="22"></g-col>
+            <g-col :span="2"
+                   :phone="{span:24}"
+                   :ipad="{span:8}"
+                   :narrowPc="{span:4}"
+                   :pc="{span:2}"
+                   :widePc="{span:1}"
+            >11
+            </g-col>
+            <g-col :span="22"
+                   :phone="{span:24}"
+                   :ipad="{span:16}"
+                   :narrowPc="{span:20}"
+                   :pc="{span:22}"
+                   :widePc="{span:23}"
+            >11
+            </g-col>
         </g-row>
         <g-row gutter="20">
             <g-col :span="4"></g-col>
