--- a/index.html
+++ b/index.html
@@ -47,48 +47,75 @@
     </style>
 </head>
 <body>
+<style>
+    .demo{
+        height: 100px;
+        background: #dddddd;
+        border: 1px solid #333333;
+    }
+</style>
 <div id="app">
-    <div style="border: 1px solid black">
-        <g-row gutter="20">
-            <g-col>1</g-col>
-            <g-col>2</g-col>
-        </g-row>
-        <g-row gutter="20">
-            <g-col>1</g-col>
-            <g-col>2</g-col>
-            <g-col>3</g-col>
-        </g-row>
-        <g-row gutter="20">
-            <g-col :span="2"
-                   :ipad="{span:8}"
-                   :narrowPc="{span:4}"
-                   :pc="{span:2}"
-                   :widePc="{span:1}"
-            >11
-            </g-col>
-            <g-col :span="22"
-                   :ipad="{span:16}"
-                   :narrowPc="{span:20}"
-                   :pc="{span:22}"
-                   :widePc="{span:23}"
-            >11
-            </g-col>
-        </g-row>
-        <g-row gutter="20">
-            <g-col :span="4"></g-col>
-            <g-col :span="16"></g-col>
-            <g-col :span="4"></g-col>
-        </g-row>
-        <g-row gutter="20">
-            <g-col :span="4"></g-col>
-            <g-col :span="20"></g-col>
-        </g-row>
-        <g-row gutter="20">
-            <g-col :span="4"></g-col>
-            <g-col :span="10"></g-col>
-            <g-col :span="10"></g-col>
-        </g-row>
-    </div>
+    <g-row>
+        <g-col :span="24" :ipad="{span:12}" :narrow-pc="{span:8}">
+            <div class="demo"></div>
+        </g-col>
+        <g-col :span="24" :ipad="{span:12}" :narrow-pc="{span:8}">
+            <div class="demo"></div>
+        </g-col>
+        <g-col :span="24" :ipad="{span:12}" :narrow-pc="{span:8}">
+            <div class="demo"></div>
+        </g-col>
+        <g-col :span="24" :ipad="{span:12}" :narrow-pc="{span:8}">
+            <div class="demo"></div>
+        </g-col>
+        <g-col :span="24" :ipad="{span:12}" :narrow-pc="{span:8}">
+            <div class="demo"></div>
+        </g-col>
+        <g-col :span="24" :ipad="{span:12}" :narrow-pc="{span:8}">
+            <div class="demo"></div>
+        </g-col>
+    </g-row>
+<!--    <div style="border: 1px solid black">-->
+<!--        <g-row gutter="20">-->
+<!--            <g-col>1</g-col>-->
+<!--            <g-col>2</g-col>-->
+<!--        </g-row>-->
+<!--        <g-row gutter="20">-->
+<!--            <g-col>1</g-col>-->
+<!--            <g-col>2</g-col>-->
+<!--            <g-col>3</g-col>-->
+<!--        </g-row>-->
+<!--        <g-row gutter="20">-->
+<!--            <g-col :span="24"-->
+<!--                   :ipad="{span:8}"-->
+<!--                   :narrowPc="{span:4}"-->
+<!--                   :pc="{span:2}"-->
+<!--                   :widePc="{span:1}"-->
+<!--            >11-->
+<!--            </g-col>-->
+<!--            <g-col :span="24"-->
+<!--                   :ipad="{span:16}"-->
+<!--                   :narrowPc="{span:20}"-->
+<!--                   :pc="{span:22}"-->
+<!--                   :widePc="{span:23}"-->
+<!--            >11-->
+<!--            </g-col>-->
+<!--        </g-row>-->
+<!--        <g-row gutter="20">-->
+<!--            <g-col :span="4"></g-col>-->
+<!--            <g-col :span="16"></g-col>-->
+<!--            <g-col :span="4"></g-col>-->
+<!--        </g-row>-->
+<!--        <g-row gutter="20">-->
+<!--            <g-col :span="4"></g-col>-->
+<!--            <g-col :span="20"></g-col>-->
+<!--        </g-row>-->
+<!--        <g-row gutter="20">-->
+<!--            <g-col :span="4"></g-col>-->
+<!--            <g-col :span="10"></g-col>-->
+<!--            <g-col :span="10"></g-col>-->
+<!--        </g-row>-->
+<!--    </div>-->
     <div class="box">
         <g-button :loading="loading1" @click="loading1 = !loading1">
             按钮
