布局组件基本功能完成

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         }
 
         #app {
-            margin: 20px;
+            /*margin: 20px;*/
         }
 
         body {
@@ -41,25 +41,27 @@
             fill: currentColor;
             overflow: hidden;
         }
-        .box{
-            margin: 20px;
-        }
+        /*.box{*/
+        /*    margin: 20px;*/
+        /*}*/
     </style>
 </head>
 <body>
 <style>
     .demo{
-        height: 100px;
-        background: #dddddd;
+        min-height: 100px;
         border: 1px solid #333333;
     }
 </style>
 <div id="app">
-    <g-row>
-        <g-col :span="23" :offset='1' :narrow-pc="{span:12,offset:12}">
-            <div class="demo"></div>
-        </g-col>
-    </g-row>
+    <g-layout style="height: 100vh">
+        <g-sider class="demo">sider</g-sider>
+        <g-layout>
+            <g-header class="demo">header</g-header>
+            <g-content class="demo">content</g-content>
+            <g-footer class="demo">footer</g-footer>
+        </g-layout>
+    </g-layout>
 <!--    <div style="border: 1px solid black">-->
 <!--        <g-row gutter="20">-->
 <!--            <g-col>1</g-col>-->
@@ -101,33 +103,33 @@
 <!--            <g-col :span="10"></g-col>-->
 <!--        </g-row>-->
 <!--    </div>-->
-    <div class="box">
-        <g-button :loading="loading1" @click="loading1 = !loading1">
-            按钮
-        </g-button>
-        <g-button icon="setting" :loading="loading2" @click="loading2 = !loading2">
-            按钮
-        </g-button>
-        <g-button icon="setting" icon-position="right" :loading="loading3" @click="loading3 = !loading3">
-            按钮
-        </g-button>
-        <g-button-group>
-            <g-button icon="left">上一页</g-button>
-            <g-button icon="right" icon-position="right">下一页</g-button>
-        </g-button-group>
-    </div>
-    <div class="box">
-        <g-input value="张三" disabled></g-input>
-        <g-input value="李四" readonly></g-input>
-        <g-input value="王五"></g-input>
-    </div>
-    <div class="box">
-        <g-input v-model="msg"></g-input>
-        {{msg}}
-    </div>
-    <div class="box">
-        <g-input value="fang" error="姓名不能少于两个字"></g-input>
-    </div>
+<!--    <div class="box">-->
+<!--        <g-button :loading="loading1" @click="loading1 = !loading1">-->
+<!--            按钮-->
+<!--        </g-button>-->
+<!--        <g-button icon="setting" :loading="loading2" @click="loading2 = !loading2">-->
+<!--            按钮-->
+<!--        </g-button>-->
+<!--        <g-button icon="setting" icon-position="right" :loading="loading3" @click="loading3 = !loading3">-->
+<!--            按钮-->
+<!--        </g-button>-->
+<!--        <g-button-group>-->
+<!--            <g-button icon="left">上一页</g-button>-->
+<!--            <g-button icon="right" icon-position="right">下一页</g-button>-->
+<!--        </g-button-group>-->
+<!--    </div>-->
+<!--    <div class="box">-->
+<!--        <g-input value="张三" disabled></g-input>-->
+<!--        <g-input value="李四" readonly></g-input>-->
+<!--        <g-input value="王五"></g-input>-->
+<!--    </div>-->
+<!--    <div class="box">-->
+<!--        <g-input v-model="msg"></g-input>-->
+<!--        {{msg}}-->
+<!--    </div>-->
+<!--    <div class="box">-->
+<!--        <g-input value="fang" error="姓名不能少于两个字"></g-input>-->
+<!--    </div>-->
 </div>
 
 
