--- a/index.html
+++ b/index.html
@@ -48,18 +48,29 @@
 </head>
 <body>
 <style>
-    .demo{
-        min-height: 100px;
-        border: 1px solid #333333;
+    .sider{
+        background: #333333;
+        width: 180px;
+    }
+    .sider.slide-enter, .sider.slide-leave-to  {
+        margin-left: -180px;
+    }
+    .header{
+        height: 100px;
+        background: #999999;
+    }
+    .footer{
+        height: 100px;
+        background: #999999;
     }
 </style>
 <div id="app">
     <g-layout style="height: 100vh">
-        <g-sider class="demo">sider</g-sider>
+        <g-sider>sider</g-sider>
         <g-layout>
-            <g-header class="demo">header</g-header>
-            <g-content class="demo">content</g-content>
-            <g-footer class="demo">footer</g-footer>
+            <g-header>header</g-header>
+            <g-content>content</g-content>
+            <g-footer>footer</g-footer>
         </g-layout>
     </g-layout>
 <!--    <div style="border: 1px solid black">-->
