--- a/index.html
+++ b/index.html
@@ -38,7 +38,9 @@
 <body>
 
 <div id="app">
-    <button @click="showToast">clickme</button>
+    <button @click="showToast1">top</button>
+    <button @click="showToast2">middle</button>
+    <button @click="showToast3">bottom</button>
 </div>
 
 
