--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <template slot="actions">
                 <button>设置</button>
             </template>
-            <g-tabs-item name="women">
+            <g-tabs-item name="women" disable>
                 <g-icon name="setting"></g-icon>美女
             </g-tabs-item>
             <g-tabs-item name="finance">财经</g-tabs-item>
