--- a/index.html
+++ b/index.html
@@ -37,19 +37,19 @@
 </head>
 <body>
 
-<div id="app" style="padding-top: 100px;padding-left: 100px;border: 1px solid red;">
-    <div style="overflow:hidden;border: 1px solid green;padding: 5px;" @click="yyy">
+<div id="app" style="margin: 150px;">
+    <div style="overflow:hidden;padding: 5px;">
         <g-popover>
             <template slot="content">
                 <div>popover内容</div>
             </template>
-            <button>点我</button>
+            <g-button>点我</g-button>
         </g-popover>
         <g-popover>
             <template slot="content">
                 <div>popover内容</div>
             </template>
-            <button>点我</button>
+            <g-button>点我</g-button>
         </g-popover>
     </div>
 </div>
