--- a/index.html
+++ b/index.html
@@ -39,13 +39,25 @@
 
 <div id="app" style="margin: 150px;">
     <div style="overflow:hidden;padding: 5px;">
-        <g-popover>
+        <g-popover position="bottom">
             <template slot="content">
                 <div>popover内容</div>
             </template>
             <g-button>点我</g-button>
         </g-popover>
-        <g-popover>
+        <g-popover position="top">
+            <template slot="content">
+                <div>popover内容</div>
+            </template>
+            <g-button>点我</g-button>
+        </g-popover>
+        <g-popover position="left">
+            <template slot="content">
+                <div>popover内容</div>
+            </template>
+            <g-button>点我</g-button>
+        </g-popover>
+        <g-popover position="right">
             <template slot="content">
                 <div>popover内容</div>
             </template>
