--- a/index.html
+++ b/index.html
@@ -64,6 +64,32 @@
             <g-button>点我</g-button>
         </g-popover>
     </div>
+    <div style="overflow:hidden;padding: 50px 5px;">
+        <g-popover position="bottom" trigger="hover">
+            <template slot="content">
+                <div>popover内容</div>
+            </template>
+            <g-button>点我</g-button>
+        </g-popover>
+        <g-popover position="top" trigger="hover">
+            <template slot="content">
+                <div>popover内容</div>
+            </template>
+            <g-button>点我</g-button>
+        </g-popover>
+        <g-popover position="left" trigger="hover">
+            <template slot="content">
+                <div>popover内容</div>
+            </template>
+            <g-button>点我</g-button>
+        </g-popover>
+        <g-popover position="right" trigger="hover">
+            <template slot="content">
+                <div>popover内容</div>
+            </template>
+            <g-button>点我</g-button>
+        </g-popover>
+    </div>
 </div>
 
 
