--- a/index.html
+++ b/index.html
@@ -12,39 +12,17 @@
             padding: 0;
             box-sizing: border-box;
         }
-
-        html {
-            --button-height: 32px;
-            --font-size: 14px;
-            --button-bg: white;
-            --button-active-bg: #eee;
-            --border-radius: 4px;
-            --color: #333;
-            --border-color: #999;
-            --border-color-hover: #666;
-
-        }
-
-        #app {
-
-        }
-
-        body {
-            font-size: var(--font-size);
-        }
     </style>
+    <style>
 
+    </style>
 </head>
 <body>
 
 <div id="app" style="padding: 100px;">
-    <g-collapse :selected.sync="selectedTab" single>
-        <g-collapse-item title="标题1" name="1">内容1</g-collapse-item>
-        <g-collapse-item title="标题2" name="2">内容2</g-collapse-item>
-        <g-collapse-item title="标题3" name="3">内容3</g-collapse-item>
-    </g-collapse>
-    {{selectedTab}}
-    <g-button icon="setting">按钮点我</g-button>
+    <g-button icon="setting" @click="loading = !loading" :loading="loading">点我</g-button>
+
+
 </div>
 
 
